--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,15 +25,23 @@ dependencies:
     sdk: flutter
   sqflite: any
 
-  path_provider: any
+  path: any
   intl: 0.15.7
   flutter_text_anchor: ^0.0.1
   hexcolor: ^1.0.6
   footer: ^0.0.3
   google_fonts: ^1.1.1
+  http: '>=0.11.3+12'
+  convert: ^2.1.1
+  json_annotation: ^3.1.1
+  json_serializable: ^3.5.1
+  flutter_bloc: ^3.2.0
+  meta: ^1.1.6
+  equatable: ^1.1.0
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_session: ^0.1.1
 
 dev_dependencies:
   flutter_test:
